Bug 1921428 - [devtools] Remove unnecessary color declaration for request detail summary text in dark mode. r=devtools-reviewers,jdescottes.
Differential Revision: https://phabricator.services.mozilla.com/D223941

--- a/devtools/client/netmonitor/src/assets/styles/HeadersPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/HeadersPanel.css
@@ -191,10 +191,6 @@
   margin-right: 3px;
 }
 
-.theme-dark .network-monitor .tabpanel-summary-value {
-  color: var(--theme-selection-color);
-}
-
 .network-monitor .tracking-protection {
   color: var(--theme-text-color-alt);
   max-width: 200px;
